--- a/.gitconfig
+++ b/.gitconfig
@@ -1,15 +1,9 @@
 [user]
     name  = Henry Huang
     email = keenhenry1109@gmail.com
-
 [core]
     editor = vim
-
-[alias]
 [color]
-    status = auto
-    diff = auto
-    branch = auto
-    interactive = auto
+    ui = true
 [merge]
     tool = kdiff3
