--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,15 @@
 # reset shell to bash shell
 set -g default-command $SHELL
 
+# tell tmux to pass xterm key combinations to xterm
+set-window-option -g xterm-keys on
+
+# Mouse support - set to on if you want to use the mouse
+# setw -g mode-mouse on
+# set -g mouse-select-pane on
+# set -g mouse-resize-pane on
+# set -g mouse-select-window on
+
 # remap prefix to Control + a
 set -g prefix C-a
 unbind C-b
@@ -9,6 +18,10 @@ bind C-a send-prefix
 # force a reload of the config file
 unbind r
 bind r source-file ~/.tmux.conf
+
+# Splitting windows into panes with h and v
+bind-key h split-window -v
+bind-key v split-window -h
 
 # quick pane cycling
 unbind ^A
