first working tmux settings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,28 +1,57 @@
-# reset shell to bash shell
+# reset shell to ordinary shell; instead of login shell
 set -g default-command $SHELL
 
 # tell tmux to pass xterm key combinations to xterm
 set-window-option -g xterm-keys on
 
-# Mouse support - set to on if you want to use the mouse
-# setw -g mode-mouse on
-# set -g mouse-select-pane on
-# set -g mouse-resize-pane on
-# set -g mouse-select-window on
-
-# remap prefix to Control + a
-set -g prefix C-a
+# remap prefix to ALT-a
 unbind C-b
-bind C-a send-prefix
+set-option -g prefix M-a
+bind-key M-a send-prefix
 
-# force a reload of the config file
-unbind r
-bind r source-file ~/.tmux.conf
+# Automatically set window title
+set-window-option -g automatic-rename on
+set-option -g set-titles on
+
+# statusbar
+set-option -g   status-utf8 on
+set-option -g   status-justify left
+set-option -g   status-left-length 15
+set-option -g   status-left ' #h |'
+set-option -g   status-right ' | %Y-%m-%d %H:%M #[default]'
+
+# default statusbar colors
+set-option -g   status-fg white
+set-option -g   status-bg blue
+set-option -g   status-attr bright
+
+# default window title colors
+set-window-option -g window-status-fg white
+set-window-option -g window-status-bg blue
+set-window-option -g window-status-attr dim
+
+# active window title colors
+set-window-option -g window-status-current-fg yellow
+set-window-option -g window-status-current-bg red
+set-window-option -g window-status-current-attr bright
+#
+set-window-option -g mode-fg white
+set-window-option -g mode-bg red
+set-window-option -g mode-attr bright
+
+# Switching between windows
+# bind-key M-a last-window
 
 # Splitting windows into panes with h and v
-bind-key h split-window -v
 bind-key v split-window -h
+bind-key s split-window -v
 
 # quick pane cycling
 unbind ^A
-bind ^A select-pane -t :.+
+bind M-a select-pane -t :.+
+
+# No delay for escape key press
+set -sg escape-time 0
+
+# force a reload of the config file
+bind r source-file ~/.tmux.conf
