--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,14 @@ set -g default-command $SHELL
 # tell tmux to pass xterm key combinations to xterm
 set-window-option -g xterm-keys on
 
+# 0 is too far from ` ;)
+set -g base-index 1
+
+# all nice options
+set -g status-keys vi
+setw -g mode-keys vi
+setw -g monitor-activity on
+
 # remap prefix to ALT-a
 unbind C-b
 set-option -g prefix M-a
@@ -39,19 +47,44 @@ set-window-option -g mode-fg white
 set-window-option -g mode-bg red
 set-window-option -g mode-attr bright
 
-# Switching between windows
-# bind-key M-a last-window
+# Alt-n/p to switch windows without prefix key
+bind -n M-p previous-window
+bind -n M-n next-window
 
 # Splitting windows into panes with h and v
 bind-key v split-window -h
 bind-key s split-window -v
 
+# Use Alt-vim keys without prefix key to switch panes
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D 
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
 # quick pane cycling
 unbind ^A
 bind M-a select-pane -t :.+
+
+# resize panes
+unbind M-Left  ; unbind-key C-Left  ; unbind Left
+unbind M-Right ; unbind-key C-Right ; unbind Right
+unbind M-Up    ; unbind-key C-Up    ; unbind Up
+unbind M-Down  ; unbind-key C-Down  ; unbind Down
+bind -n M-Left    resize-pane -L 3
+bind -n M-Right   resize-pane -R 3
+bind -n M-Up      resize-pane -U 3
+bind -n M-Down    resize-pane -D 3
 
 # No delay for escape key press
 set -sg escape-time 0
 
 # force a reload of the config file
 bind r source-file ~/.tmux.conf
+
+# copy-mode settings; use vim-compatible settings to speed
+# things up in copy-mode (scroll-mode)
+unbind ] ; unbind p; unbind [
+bind m copy-mode
+bind p paste-buffer
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
