updated .tmux.conf for work

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,37 +1,57 @@
+# Priority: prefix key and reloading tmux.conf and shell
+#
+# change prefix from C-b to C-Space
+unbind C-b
+set -g prefix C-Space
+bind Space send-prefix
+
+# force a reload of the config file
+bind r source-file ~/.tmux.conf
+
 # reset shell to ordinary shell; instead of login shell
 set -g default-command $SHELL
 
-# tell tmux to pass xterm key combinations to xterm
-set-window-option -g xterm-keys on
+# Terminal admin:
+# ---------------
+# set mouse on
+set -g mouse on
+setw -g mode-mouse on
 
-# 0 is too far from ` ;)
+# start with window 1
 set -g base-index 1
 
-# all nice options
+# start with pane 1
+set -g pane-base-index 1
+
+# use vi mode
 set -g status-keys vi
 setw -g mode-keys vi
+
+# allow utf8 support
+setw -g utf8 on
+
+# tell tmux to pass xterm key combinations to xterm
+setw -g xterm-keys on
+
+# all nice options
 setw -g monitor-activity on
 
-# remap prefix to ALT-a
-unbind C-b
-set-option -g prefix M-a
-bind-key M-a send-prefix
-
 # Automatically set window title
-set-window-option -g automatic-rename on
+setw -g automatic-rename on
 set-option -g set-titles on
 
-# statusbar
-set-option -g   status-utf8 on
-set-option -g   status-justify left
-set-option -g   status-left-length 15
-set-option -g   status-left ' #h |'
-set-option -g   status-right ' | %Y-%m-%d %H:%M #[default]'
+# Status Bar:
+# -----------
+set-option -g status-utf8 on
+set-option -g status-justify left
+set-option -g status-left-length 15
+set-option -g status-left ' #h |'
+set-option -g status-right ' | %Y-%m-%d %H:%M #[default]'
 
 # default statusbar colors
-set-option -g   status-fg white
-set-option -g   status-bg blue
-set-option -g   status-attr bright
+set-option -g status-fg white
+set-option -g status-bg blue
+set-option -g status-attr bright
 
 # default window title colors
 set-window-option -g window-status-fg white
@@ -77,9 +97,6 @@ bind -n M-Down    resize-pane -D 3
 
 # No delay for escape key press
 set -sg escape-time 0
-
-# force a reload of the config file
-bind r source-file ~/.tmux.conf
 
 # copy-mode settings; use vim-compatible settings to speed
 # things up in copy-mode (scroll-mode)
